~ FC_Rpg Changelog ~

-------------------------------------------------------------------
Version 1.3 BETA:
-------------------------------------------------------------------
FC_Suite_Shared Requirement: Version 2.55

Configs you will have to update in this version:
- ItemConfig.yml
- SpellConfig.yml
- TreasureConfig.yml (Will auto-update to add new settings)
- Enchantments.yml (Brand new, recommended to review and update.)

-------------------------------------------------------------------
General:
- I recommend making a full backup of your server for this update. I do not generally adivse something like this, but this version has so much new content that I have not been able to playtest with any live testers, that the chance of bugs are great. I have done my best to test everything but bugs may or may not have slipped in. This risk always exists with my updates, but usually the risk is very small. I have to say that the risk on this update is pretty big, namely due to the custom item enchantments. As such this is going to be classed as a BETA. Once I have confirmed that this version is working well, I'm going to release a release version 1.31. I feel that a 1.31 release version is pretty much garutneed due to the amount of new content.
- Added new nick feature. Comes with generalconfig setting for a prefix on nicks. Can be customized with modify command.

-------------------------------------------------------------------
Players:
- Fixed issue where player health wasn't being loaded on player joins.
- Optimized health saving.
- Readded level 1 spell point. Removed spell point given when player is at level cap. Players will be force respec'd to accomodate for this. Sorry >.<. The main issue is that mages need spells to be effective at level 1.

-------------------------------------------------------------------
Commands:
- Added new /rpg help command to allow players to get some insight into how FC_Rpg works.