@@ -35,10 +35,9 @@ public enum SpellEffect
 	HEAL_SELF_PERCENT(23),
 	CRITICAL_DAMAGE_DOUBLE(24),
 	HEAL_CHANCE(25),
-	BONUS_STATS(26),
-	FIRE_STRIKE(27),
-	IGNORE_ARMOR(28),
-	FROST_STRIKE(29),
+	FIRE_STRIKE(26),
+	IGNORE_ARMOR(27),
+	FROST_STRIKE(28),
 	
 	// [1000 - 1999] Fancy custom effect enchants.
 	BONUS_GOLD(1000),
